Occupy space for caret when hidden to prevent flickering.

--- a/enterprise/src/web/enterprise/components/OverlayDropdown.css
+++ b/enterprise/src/web/enterprise/components/OverlayDropdown.css
@@ -3,9 +3,9 @@
 }
 
 :local(.dropdowntoggle) .caret {
-    display: none;
+    visibility: hidden;
 }
 
 :local(.dropdowntoggle):hover .caret {
-    display: inline-block;
+    visibility: visible;
 }
